--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,11 @@
 /* EXERCÍCIO 1: fontes */
 /* importá-las aqui... e definir as `font-family` da turminha... */
-
+@import "fonts/ravie.css";
+@import "fonts/verdana.css";
 
 body {
   background-color: #fff;
+  font-family: "Verdana";
 }
 
 strong {
@@ -72,6 +74,7 @@ strong {
   font-size: 36px;
   color: #e90c0c;
   font-weight: normal;
+  font-family: "Ravie";
 }
 
 #cabecalho-pagina h2 {
