--- a/estilo.css
+++ b/estilo.css
@@ -6,6 +6,7 @@
 body {
   background-color: #fff;
   font-family: "Verdana";
+  margin: 0px;
 }
 
 strong {
@@ -36,30 +37,42 @@ strong {
   color: #333;
 }
 
-
 /* EXERCÍCIO 2: layout da página */
 #recipiente {
-  /* layout da página aqui */
-  /* ... */
-  /* ... */
-  /* ... */
-  /* ... */
+  margin-left: auto;
+  margin-right: auto;
+  width: 800;
+  display: grid;
+  grid-template-columns: 154px auto;
+  grid-template-rows:  96px auto 116px;
+}
+
+html, body, #recipiente {
+  min-height: 100vh;
 }
 
 #cabecalho-pagina {
-
+  grid-column: 2/2;
+  grid-row: 1/2;
+  padding: 10px;
 }
 
 #lateral {
-
+  grid-column: 1/1;
+  grid-row: 1/3;
+  padding-top: 17px;
 }
 
 #cardapio {
-
+  grid-column: 2/2;
+  grid-row: 2/2;
+  padding: 20px;
 }
 
 #rodape-pagina {
-
+  padding-top: 46px;
+  padding-bottom: 15px;
+  padding-right: 25px;
 }
 
 
