--- a/estilo.css
+++ b/estilo.css
@@ -52,26 +52,25 @@ html, body, #recipiente {
 }
 
 #cabecalho-pagina {
-  grid-column: 2/2;
+  grid-column: 2;
   grid-row: 1/2;
 }
 
 #lateral {
-  grid-column: 1/1;
+  grid-column: 1;
   grid-row: 1/3;
   padding-top: 17px;
 }
 
 #cardapio {
-  grid-column: 2/2;
-  grid-row: 2/2;
+  grid-column: 2;
+  grid-row: 2;
   padding: 20px;
 }
 
 #rodape-pagina {
-  padding-top: 46px;
-  padding-bottom: 15px;
-  padding-right: 25px;
+  grid-column: 2;
+  grid-row: 3
 }
 
 
@@ -110,6 +109,11 @@ article {
 
 /* EXERCÍCIO 5: o rodapé */
 #rodape-pagina {
+  padding-top: 46px;
+  padding-bottom: 15px;
+  padding-right: 25px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 /* EXERCÍCIO 6: lateral */
